--- a/maintenance.html
+++ b/maintenance.html
@@ -48,15 +48,15 @@
         <div class="collapse navbar-collapse d-flex gap-3 gap-lg-5  justify-content-end" id="navbarSupportedContent"
             style="width: 25% !important;">
 
-            <a href="tel:+91" class="nave-hidew d-flex justify-content-center gap-3 align-items-center">
-                <div class="nav-contact-icon">
-                    <i class="fa-solid fa-headset fa-shake"></i>
-                </div>
-                <div class="nav-contact-details d-none d-md-block">
-                    <span>Contact Us</span>
-                    <h6>+91 98765 43210</h6>
-                </div>
-            </a>
+            <a href="tel:+918220149256" class="nave-hidew d-flex justify-content-center gap-3 align-items-center">
+                    <div class="nav-contact-icon">
+                        <i class="fa-solid fa-headset fa-shake"></i>
+                    </div>
+                    <div class="nav-contact-details d-none d-md-block">
+                        <span>Contact Us</span>
+                        <h6>+91 82201 49256</h6>
+                    </div>
+                </a>
             <a href="" class="nave-hidew d-flex justify-content-center gap-3 align-items-center">
                 <div class="nav-contact-icon">
                     <i class="fa-solid fa-envelope fa-shake"></i>
