--- a/residential.html
+++ b/residential.html
@@ -636,25 +636,26 @@
             <div class="footer-boxs">
                 <h4>OUR <span>SERVICES</span> </h4>
                 <ul>
-                    <li><a href="#">Residential Construction</a></li>
-                    <li><a href="#">Commercial Construction</a></li>
-                    <li><a href="#">Architectural Services</a></li>
-                    <li><a href="#">Interior Design</a></li>
-                    <li><a href="#">Project Management</a></li>
-                    <li><a href="#">Renovation Work</a></li>
-                    <li><a href="#">Maintenance Work</a></li>
+                    <li><a href="residential.html">Residential Construction</a></li>
+                    <li><a href="commercial.html">Commercial Construction</a></li>
+                    <li><a href="architectural.html">Architectural Services</a></li>
+                    <li><a href="interior.html">Interior Design</a></li>
+                    <li><a href="project-management.html">Project Management</a></li>
+                    <li><a href="renovation.html">Renovation Work</a></li>
+                    <li><a href="maintenance.html">Maintenance Work</a></li>
                 </ul>
             </div>
 
             <div class="footer-boxs">
                 <h4>QUICK <span>LINKS</span> </h4>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Blogs</a></li>
-                    <li><a href="#">Contact</a></li>
-
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="blog.html">Blogs</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
             </div>
             <div class="footer-boxs">
                 <h4>CONTACT <span>INFO</span> </h4>
