--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="assets/images/banner/1.jpg" alt="Thomson-construction-banner">
+                        <img src="assets/images/new-banner/1.jpeg" alt="Thomson-construction-banner">
                         <div class="banner-content">
                             <h4>Trusted construction company</h4>
                            <h1>Build your dream <br>house <span>today!</span></h1>
@@ -239,7 +239,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <img src="assets/images/banner/2.jpg" alt="Thomson-construction-banner">
+                        <img src="assets/images/new-banner/2.jpeg" alt="Thomson-construction-banner">
                           <div class="banner-content">
                             <h4>Trusted construction company</h4>
                            <h1>Build your dream <br>house <span>today!</span></h1>
@@ -248,7 +248,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <img src="assets/images/banner/3.jpg" alt="Thomson-construction-banner">
+                        <img src="assets/images/new-banner/3.jpeg" alt="Thomson-construction-banner">
                          <div class="banner-content">
                             <h4>Trusted construction company</h4>
                            <h1>Build your dream <br>house <span>today!</span></h1>
